fixed button on mobile

--- a/assets/azhar.css
+++ b/assets/azhar.css
@@ -374,24 +374,10 @@ img.pop-product-image {
   overflow: hidden;
   z-index: 2;
 }
-.add-to-cart-btn::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff544;
-  color: #000;
-  transition: top 0.3s ease;
-  z-index: -1;
-}
-.add-to-cart-btn:hover::before {
-  top: 0;
-}
 
 .add-to-cart-btn:hover {
   color: #000;
+  background: #fff544;
 }
 
 .add-to-cart-btn:hover img {
@@ -453,7 +439,7 @@ MEDIA QUERIES CSS
     text-align: center;
     background: #f8f8f8;
     margin: 0;
-    padding: 3px 0;
+    padding: 10px;
   }
 }
 @media (min-width: 2200px) {
@@ -538,10 +524,13 @@ MEDIA QUERIES CSS
     display: none;
   }
   a.button_black.mobile_visible {
-    display: inline-block;
+    display: flex;
     position: absolute;
     bottom: 75px;
     left: 50%;
+    gap: 10px;
+    justify-content: space-between;
+    width: 60%;
     transform: translateX(-50%);
   }
   img.banner_image.mobile_image {
